<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Acoca</string>
    <string name="action_settings">Settings</string>
    <string name="mainboard_title">Mainboard</string>
    <string name="settings_title">Settings</string>
    <string name="drinks_title">Drinks</string>
    <string name="current_alcohol_level">Current alcohol level:</string>
    <string name="money_spend">Expenditures:</string>
    <string name="drink_mode">Drink mode:</string>
    <string name="history">History:</string>
    <string name="save_settings">Save settings</string>
    <string name="body_weight">Body weight (kg):</string>
    <string name="sex">Sex:</string>
    <string name="name">Name:</string>
    <string name="price">Price (€):</string>
    <string name="alcohol_level">Alcohol Level (%):</string>
    <string name="amount">Amount (L):</string>
    <string name="add">Add</string>
    <string name="add_new_drink">Add new drink</string>
    <string name="drink_confirmation">Do you want to consume this drink?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="drink_mode_notice">You have to be in drink mode to consume drink!</string>
    <string name="drinks_page_info">Hint: Touch drink to consume it.</string>
    <string name="weight_info">Notice: Your weight and sex is used to calculate correct blood alcohol content level.</string>
    <string name="delete_confirmation">Are you sure you want to delete this drink?</string>
    <string name="bac_over_050">Warning! You\'re not able to operate motorized vehicle.</string>
    <string name="ok">OK</string>
    <string name="enter_name">Enter name of the session (leave empty for default):</string>
    <string name="history_title">History</string>
    <string name="select_drinking_session">Select drinking session:</string>
    <string name="highest_alcohol_level">Highest alcohol level:</string>

</resources>
