<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical" 
    tools:context=".MainActivity$SettingsFragment" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight_info"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_marginBottom="7dip" />

	<TextView
	    android:id="@+id/nameTextView"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/body_weight"
	    android:textAppearance="?android:attr/textAppearanceMedium" />
	
	<EditText
	    android:id="@+id/bodyWeightTextBox"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:inputType="number|numberSigned" >
	
	    <requestFocus />
	</EditText>
	
	<TextView
	    android:id="@+id/textView2"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/sex"
	    android:textAppearance="?android:attr/textAppearanceMedium" />
	
	<ListView
	    android:id="@+id/sexListView"
	    android:layout_width="match_parent"
	    android:layout_height="128dp"
	    android:entries="@array/sex" >
	</ListView>
	
	<Button
	    android:id="@+id/saveSettingsButton"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/save_settings" />

</LinearLayout>